load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "opam",
    linkstatic = True,
    srcs  = [
        "opam.c", "opam.h",
    ],
    defines = select({
        "//bzl/host:debug": ["TRACING"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
        "//conditions:default":   []
    }) + [
        "WITH_C_LOADER"
    ],
    copts = select({
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-Wall",
        "-Wpedantic",
        "-Wno-unused-function",

        "-Isrc",                             # log.h (local)
        "-Iexternal/mibl/src",               # log.h

        "-I$(GENDIR)/src/opam",              # log.h (local)
        "-I$(GENDIR)/opam",                  # opam.h (local)
        "-I$(GENDIR)/external/mibl/opam",    # opam.h

        "-I$(GENDIR)/src",                   # mibl.h (local)
        "-I$(GENDIR)/external/mibl/src",     # mibl.h

        "-Iexternal/uthash/include",
        "-Iexternal/libinih",

        "-Iexternal/libs7/src",
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + [
        "-lm",
    ],
    data = [
        "//scm:srcs",
        "//scm/dune:srcs",
        "//scm/meta:srcs",
        "//scm/opam:srcs",
    ],
    deps = [
        "//src/opam",
        # "//src:mibl",
        "//external/libinih:inih",
        # "@libs7//src:s7",
        # "@libs7//src:c_s7",
        # "@libs7//vendored/linenoise",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "opam.c",
    ],
    outs = [
        "opam.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location opam.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location opam.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
