load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "repl",
    linkstatic = True,
    srcs  = [
        "repl.c", "repl.h",
        "xen_repl.c", "xen_repl.h",
        # "//src:opam_config.h",
        # "//src:bazel_config.h"
        "//vendored/logc:log.c",
        "//vendored/logc:log.h"
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
        "//conditions:default":   []
    }) + [
        "WITH_C_LOADER"
        # "LD_LIBRARY_PATH=external/libs7/src"
    ],
    copts = select({
        # strdup is non-standard, not supported on linux in strict c11 mode?
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        # "-pedantic-errors",
        "-Wall",
        "-Wno-unused-function",

        "-I$(GENDIR)/src",
        "-I$(GENDIR)/external/mibl/src",

        "-I$(GENDIR)/repl",
        "-I$(GENDIR)/external/mibl/repl",

        "-Ivendored/uthash",
        "-Iexternal/vendored/uthash",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",

        # "-Iexternal/libinih",
        "-Iexternal/logc/src",

        "-Iexternal/libs7/src",
        "-Iexternal/mibl/libs7/src",
        "-Iexternal/libs7/vendored/linenoise",
        "-Iexternal/mibl/libs7/vendored/linenoise",
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + [
        "-lm",
        # "-lc_s7"
    ],
    deps = [
        "//src:mibl",
        # "//external/libinih:inih",
        "//vendored/uthash",
        # "@logc//:logc",
        "@libs7//src:s7",
        "@libs7//src:c_s7",
        # "@libs7//vendored/linenoise",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "repl.c",
        "xen_repl.c",
    ],
    outs = [
        "repl.h",
        "xen_repl.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location repl.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location @makeheaders//:makeheaders) \\",
        "    $(location repl.c) \\",
        "    $(location xen_repl.c)",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["@makeheaders//:makeheaders"],
    visibility = ["//visibility:public"]
)
