filegroup(
    name = "srcs",
    data = ["libmibl.scm",      # library routines
            "mibl_main.scm",    # -main routine for mibl tools
            "mibl_pp.scm",
            "dune.scm",
            "findlib.scm",
            "mibl.scm",
            "opam.scm"],
    visibility = ["//visibility:public"]
)

