filegroup(
    name = "srcs",
    data = ["libmibl.scm",      # library routines
            "mibl_expand.scm",# -main routine
            "libdune.scm",
            # "libmibl0.scm",
            # "mibl_main.scm", # OBSOLETE -main routine
            "mibl_pp.scm",
            "mibl_debug.scm",
            "findlib.scm",
            "mibl.scm",
            "opam.scm",
            ],
    visibility = ["//visibility:public"]
)

