load("@rules_cc//cc:defs.bzl", "cc_binary")

##########
cc_binary(
    name  = "script",
    args  = ["-m", "mibl_main.scm"],
    linkstatic = True,
    srcs  = [
        "script.c", "script.h",
    ],
    defines = select({
        "//bzl/host:debug": ["DEBUG_TRACE"],
        "//conditions:default":   []
    }) + select({
        "//bzl/host:linux": ["_XOPEN_SOURCE=500"], # strdup
        "//conditions:default":   []
    }) + [
        "WITH_C_LOADER"
    ],
    copts = select({
        "//bzl/host:macos": ["-std=c11"],
        "//bzl/host:linux": ["-std=gnu11"],
        "//conditions:default": ["-std=c11"],
    }) + [
        "-Wall",
        "-Werror",
        "-Wpedantic",
        "-Wno-unused-function",

        "-I$(GENDIR)/src",

        "-I$(GENDIR)/script",

        "-I$(GENDIR)/external/mibl/script",
        "-I$(GENDIR)/external/mibl/src",

        "-I$(GENDIR)/src/hdrs",
        "-I$(GENDIR)/external/mibl/src/hdrs",

        "-Ivendored/gopt",
        "-Iexternal/mibl/vendored/gopt",

        "-Ivendored/libinih",
        "-Iexternal/mibl/vendored/libinih",

        "-Ivendored/logc",
        "-Iexternal/mibl/vendored/logc",


        "-Ivendored/uthash",
        "-Iexternal/mibl/vendored/uthash",

        "-Iexternal/libs7/src",
    ],
    linkopts = select({
        "//bzl/host:macos": [],
        "//bzl/host:linux": [ "-Wl,-E", "-ldl"],
        "//conditions:default": {}
    }) + [
        "-lm",
        # "-lc_s7"
    ],
    data = [
        "//scm:srcs",
        "//scm/dune:srcs",
        "//scm/meta:srcs",
        "//scm/opam:srcs",
    ],
    deps = [
        "//src:mibl",
        "//vendored/gopt",
        "//vendored/libinih:inih",
        "//vendored/logc",
        "//vendored/uthash",

        # "@libs7//src:s7",
        # "@libs7//src:c_s7",
        # "@libs7//vendored/linenoise",
    ],
    visibility = ["//visibility:public"]
)

########
genrule(
    name = "mkhdrs",
    srcs = [
        "script.c",
    ],
    outs = [
        "script.h",
    ],
    cmd = "\n".join([
        "SRC1=$(location script.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location script.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
