load(":BUILD.bzl", "script")

script(name = "dbg")

script(name = "convert", main = "mibl_main.scm")

########
genrule(
    name = "mkhdrs",
    srcs = ["script.c"],
    outs = ["script.h"],
    cmd = "\n".join([
        "SRC1=$(location script.c)",
        "SRCDIR1=`dirname $$SRC1`",
        "$(location //vendored/makeheaders) \\",
        "    $(location script.c);",
        "cp $${SRCDIR1}/*.h $(@D)",
    ]),
    tools = ["//vendored/makeheaders"],
    visibility = ["//visibility:public"]
)
